<resources>
    <string name="app_name">Lab2-Calculator-Parakhin</string>
    <string name="editText1">Вводите...</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonComma">,</string>
    <string name="buttonEquals">=</string>
    <string name="buttonDivide">/</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonSqr">^2</string>
    <string name="buttonSqrt">sqrt</string>
    <string name="buttonM">M</string>
    <string name="buttonMS">MS</string>
</resources>