<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/editText1"
        android:hint="@string/editText1"
        android:importantForAccessibility="auto"
        android:inputType="number|numberDecimal"
        android:labelFor="@+id/editText1"
        app:layout_constraintBottom_toTopOf="@+id/buttonM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="ContentDescription,LabelFor" />

    <Button
        android:id="@+id/buttonComma"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="50dp"
        android:text="@string/buttonComma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="50dp"
        android:text="@string/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAll"
        app:layout_constraintStart_toEndOf="@+id/buttonComma" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="50dp"
        android:text="@string/buttonEquals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAll" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@id/button0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@id/buttonEquals"
        app:layout_constraintEnd_toEndOf="@+id/buttonEquals"/>

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:text="@string/buttonMinus"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintStart_toStartOf="@id/buttonEquals"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@id/button0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@id/buttonEquals"
        app:layout_constraintEnd_toEndOf="@id/buttonEquals"/>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:text="@string/buttonMultiply"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintStart_toStartOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button4"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="3dp"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@id/button0" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@id/buttonEquals"
        app:layout_constraintEnd_toEndOf="@id/buttonEquals"/>

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:text="@string/buttonDivide"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintStart_toStartOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"/>

    <Button
        android:id="@+id/buttonSqr"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/buttonSqr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button7"/>

    <Button
        android:id="@+id/buttonSqrt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="3dp"
        android:text="@string/buttonSqrt"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonSqr"
        app:layout_constraintEnd_toEndOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@id/button0" />

    <Button
        android:id="@+id/buttonMS"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:text="@string/buttonMS"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@id/buttonEquals"
        app:layout_constraintEnd_toEndOf="@id/buttonEquals"/>

    <Button
        android:id="@+id/buttonM"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:text="@string/buttonM"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintStart_toStartOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"/>


</androidx.constraintlayout.widget.ConstraintLayout>